...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ESU-iE-Qyq">
                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ylL-L5-AZR" customClass="ProgressWheel" customModule="achievements" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="progressWheel"/>
                                        <gestureRecognizers/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="200" id="jtN-An-27p"/>
                                        </constraints>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="color" keyPath="textColor">
...
                                    <barButtonItem title="incomeTemplates" image="folder.badge.plus" catalog="system" style="plain" id="MHP-u2-p94">
                                        <connections>
                                            <action selector="toolbarIncomeTemplatesButtonPressed:" destination="ldu-oQ-Xxf" id="rqJ-xK-13P"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ctg-yN-9bK"/>
                                    <barButtonItem title="expenseTemplates" image="folder.badge.minus" catalog="system" style="plain" id="8iy-rC-9zu" userLabel="expenseTemplates">
                                        <connections>
                                            <action selector="toolbarExpenseTemplatesButtonPressed:" destination="ldu-oQ-Xxf" id="ha9-cA-EkE"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="2zf-jU-6kR"/>
                                    <barButtonItem title="Menu" image="line.horizontal.3" catalog="system" style="plain" id="YPi-FL-MVe" userLabel="Menu"/>
                                </items>
                            </toolbar>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="KFZ-yK-khd"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
...
                            <constraint firstItem="pJ0-MX-y9q" firstAttribute="top" secondItem="ESU-iE-Qyq" secondAttribute="bottom" symbolic="YES" id="DY7-vD-GxE"/>
                            <constraint firstItem="pJ0-MX-y9q" firstAttribute="trailing" secondItem="KFZ-yK-khd" secondAttribute="trailing" id="keh-DV-zjO"/>
                            <constraint firstItem="pJ0-MX-y9q" firstAttribute="leading" secondItem="KFZ-yK-khd" secondAttribute="leading" id="ph3-tN-DQX"/>
                            <constraint firstItem="ESU-iE-Qyq" firstAttribute="trailing" secondItem="KFZ-yK-khd" secondAttribute="trailing" id="rah-WD-np1"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Dashboard" id="9Zd-MP-RNW"/>
                    <connections>
                        <outlet property="menuButton" destination="YPi-FL-MVe" id="Ecr-2b-Q6T"/>
                        <outlet property="progressWheel" destination="ylL-L5-AZR" id="oHi-sm-kDu"/>
                        <outlet property="recentTransactionsTableView" destination="p47-nM-Nw2" id="54d-Ig-g8d"/>
                        <segue destination="vs7-wr-Yeq" kind="show" identifier="ShowHistorySegue" id="iYA-fg-WtE"/>
                    </connections>
...
