...
    // MARK: Private Functions
    private func populateViewWith(_ transaction: HistoricalTransaction) {
        if transaction.amount < 0 {
            amountLabel.text = "\(NumberHelper.formattedString(for: transaction.amount))"
            amountLabel.textColor = .systemRed
        } else if transaction.amount == 0 {
            amountLabel.text = "+/- 0,00"
            amountLabel.textColor = .none
        } else {
            amountLabel.text = "+\(NumberHelper.formattedString(for: transaction.amount))"
            amountLabel.textColor = .systemGreen
        }
        
...
